# photo-to-json

./: README.md  pyproject.toml
src/photo_to_json/: __init__.py  models.py  pipeline.py
tests/: test_pipeline.py
