[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-to-json"
version = "0.1.0"
description = "VLM-powered bibliography index extraction pipeline"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.20.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
